--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prettier": "1.19.1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1"
   }
 }
