--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^2.0.4"
   }
 }
